--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
             <h3 class="cd-headline clip is-full-width">
                 <span>Worked in Domains Like </span>
                 <span class="cd-words-wrapper">
-                    <b class="is-visible">Web Developer.</b>
+                    <b class="is-visible">AI ML Engineer.</b>
                     <b>Web Designing.</b>
-                    <b>AI ML Engineer.</b>
-                    <b>Data Analyst.</b>
+                    <b>Embedded Programmer.</b>
+                    <b>Web Developer.</b>
                 </span>
             </h3>
         </div>
@@ -137,13 +137,9 @@
                 <div class="col-md-6">
                     <div class="message-box">
                         <h2>About Me.</h2>
-                        <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus
-                            bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis
-                            dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet
-                            libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue
-                            justo. </p>
-                        <p>Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero,
-                            eu bibendum risus. Phasellus et congue justo.</p>
+                        <p> I possess a unique blend of technical and creative skills, and a passion for harnessing the power of technology to solve complex problems.In addition to my technical expertise, I have also demonstrated a strong aptitude for creativity and design. I have participated in several projects that involve graphic design, web development, and user interface design
+                            my ability to combine your technical skills with an eye for design has resulted in successful projects that are both functional and aesthetically pleasing.
+                        </p>
 
                         <a href="resume\Resume_Piyush.pdf" download class="sim-btn btn-hover-new"
                             data-text="CV &#8594;"><span>Download CV</span></a>
