--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <span>Worked in Domains Like </span>
                 <span class="cd-words-wrapper">
                     <b class="is-visible">AI ML Engineer.</b>
-                    <b>Web Designing.</b>
+                    <b>IOT.</b>
                     <b>Embedded Programmer.</b>
                     <b>Web Developer.</b>
                 </span>
@@ -159,8 +159,8 @@
     <div id="services" class="section lb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>Services</h3>
-                <p>Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus.
+                <h3>Skill set</h3>
+                <p>These are the skill sets which I own, I used these into my projects .
                 </p>
             </div><!-- end title -->
 
@@ -180,7 +180,7 @@
                         <div class="ser-icon">
                             <i class="flaticon-development"></i>
                         </div>
-                        <h2>Responsive Design</h2>
+                        <h2>IOT</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
@@ -188,9 +188,9 @@
                 <div class="col-md-4">
                     <div class="services-inner-box">
                         <div class="ser-icon">
-                            <i class="flaticon-process"></i>
+                            <i class="flaticon-phone"></i>
                         </div>
-                        <h2>Creative Design</h2>
+                        <h2>Embedded Programming</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
@@ -200,7 +200,7 @@
                         <div class="ser-icon">
                             <i class="flaticon-discuss-issue"></i>
                         </div>
-                        <h2>Support</h2>
+                        <h2>Hardware electronics</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
@@ -210,7 +210,7 @@
                         <div class="ser-icon">
                             <i class="flaticon-idea"></i>
                         </div>
-                        <h2>Web Idea</h2>
+                        <h2>Cloud computing</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
@@ -220,7 +220,7 @@
                         <div class="ser-icon">
                             <i class="flaticon-idea-1"></i>
                         </div>
-                        <h2>Graphic Design</h2>
+                        <h2>AI ML</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua.</p>
                     </div>
