--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script src="https://kit.fontawesome.com/723f7fc4c3.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body id="page-top" class="politics_version">
