--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#services">Skill set</a>
+                        <a class="nav-link js-scroll-trigger" href="#services">Achievements</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -161,8 +161,8 @@
     <div id="services" class="section lb">
         <div class="container">
             <div class="section-title text-left">
-                <h3>Skill set</h3>
-                <p>These are the skill sets which I own, I used these into my projects .
+                <h3>Achievements </h3>
+                <p>These are my Achievements  .
                 </p>
             </div><!-- end title -->
 
@@ -172,9 +172,8 @@
                         <div class="ser-icon">
                             <i class="flaticon-seo"></i>
                         </div>
-                        <h2>Web Development</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
+                        <h2>Best innovative project at sparkathon</h2>
+                        <p>One of the best innovative projects that I have come across is the development of self-driving Drone. This project involves using cutting-edge technology such as artificial intelligence and computer vision to create a Drone that can drive itself without the need for human intervention. Self-driving drones have the potential to revolutionize the way we travel, making transportation safer, more efficient, and more environmentally friendly. This project has required the collaboration of experts from various fields such as software engineering, robotics, and automotive design, making it a truly interdisciplinary effort. The progress made in this project is not only remarkable but also inspiring, as it showcases the power of human ingenuity and innovation.</p>
                     </div>
                 </div><!-- end col -->
                 <div class="col-md-4">
