--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- Mobile Metas -->
 <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+<meta name="google-adsense-account" content="ca-pub-8164485088754254">
 <!-- Site Metas -->
 <title>Piyush portfolio </title>
 <meta name="keywords" content="">
@@ -62,6 +62,12 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Github</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Linkedin</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger active" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
@@ -80,8 +86,9 @@
                         <a class="nav-link js-scroll-trigger" href="#blog">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact">Contact Us</a>
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact Me</a>
                     </li>
+                   
                 </ul>
             </div>
         </div>
@@ -98,10 +105,10 @@
             <h3 class="cd-headline clip is-full-width">
                 <span>Worked in Domains Like </span>
                 <span class="cd-words-wrapper">
-                    <b class="is-visible">AI ML Engineer.</b>
+                    <b class="is-visible">AI ML .</b>
                     <b>IOT.</b>
-                    <b>Embedded Programmer.</b>
-                    <b>Web Developer.</b>
+                    <b>Embedded Systems .</b>
+                    <b>Web Developement.</b>
                 </span>
             </h3>
         </div>
